k3s/test-ebs2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-ebs
spec:
  containers:
  - image: busybox
    name: test-container
    volumeMounts:
    - mountPath: /test-eb
      name: test-volume
  volumes:
  - name: test-volume
    persistentVolumeClaim:
      claimName: my-manually-created-pv
