k3s/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  replicas: 1
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      nodeName: ip-172-31-47-101
      containers:
        - name: influxdb
          image: influxdb:1.8.3
          ports:
            - containerPort: 8086
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-influxdb
  labels:
    app: influxdb
spec:
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: influxdb
