k3s/nginx-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: kube-system
  labels:
    app: my-nginx
spec:
  selector:
    matchLabels:
      app: my-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: my-nginx
    spec:
      containers:
        - image: nginx # 使用 nginx 的 docker image
          name: my-nginx
          ports:
            - containerPort: 80 # 暴露 nginx 的监听端口
              name: 'my-nginx'
              protocol: 'TCP'
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  namespace: kube-system
  labels:
    app: my-nginx
spec:
  ports:
    - name: http
      port: 80 # service 的监听端口
      protocol: TCP
      targetPort: 80 # Pod 的监听端口
  selector:
    app: my-nginx
