k3s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: tool.ivu1314.com
    http:
      paths:
      - path: /dashboard/
        backend:
          serviceName: traefik
          servicePort: dash
      - path: /nginx/
        backend:
          serviceName: my-nginx
          servicePort: http
